Update Functions, While loop, Pandas, Matplotlib.ipynb

--- a/Class 6. Functions, While loop, Pandas, Matplotlib.ipynb
+++ b/Class 6. Functions, While loop, Pandas, Matplotlib.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Class 6: Functions, While loop, Pandas, Matplotlib\n",
+    "# Functions, While loop, Pandas, Matplotlib\n",
     "\n",
     "In this notebook the following main topics are covered:\n",
     "- **Defining functions**: salary calculatior, finding position of a word in text\n",
